--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "mongodb": "^6.8.1",
         "morgan": "~1.9.1",
         "node-schedule": "^2.1.1",
+        "chrome-launcher": "^0.10.2",
+        "chrome-remote-interface": "^0.26.1",
         "puppeteer": "^23.2.1"
     },
     "devDependencies": {
